build(flink): add --add-opens for forked tests so Flink 1.x (older Kryo) runs on JDK 17+
Flink 1.20's Kryo reflection requires java.base/java.util opened to the unnamed
module on JDK 21; the in-process mini-cluster then executes the e2e spec.
Verified: flink/test passes on both Flink 2.2.0 (default) and 1.20.0
(-Dflink.version=1.20.0).